Create full stack app backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+#spring.datasource.driverClassName = org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://primertest.postgres.database.azure.com:5432/postgres
+spring.datasource.username=milanoboy
+spring.datasource.password=Mallam20
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jackson.serialization.fail-on-empty-beans=false
+
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=validate
+
+server.port=8080
